testData/annotation/IDEA_106515_2.hx
class <info descr="null">Test</info> {
  public static function <info descr="null">main</info>() {
    <error descr="Unresolved type">TArray</error>;
  }
}